--- a/demo/html/portal/index.html
+++ b/demo/html/portal/index.html
@@ -82,14 +82,14 @@
         <div id="pp" style="overflow: hidden;">
             <div style="width:35%;">
                 <div title="关于本系统" iconCls="icon-shield" collapsible="true" closable="true" style="height:210px;">
-                    <div class="portal-list">系统名称：TopJUI前端框架 V1.0正式版</div>
+                    <div class="portal-list">系统名称：TopJUI前端框架 v1.0正式版</div>
                     <div class="portal-list">GIT 下载：<a href="http://git.oschina.net/xvpindex/TopJUI" target="_blank">http://git.oschina.net/xvpindex/TopJUI</a>
                     </div>
                     <div class="portal-list">官方网站：<a href="http://www.topjui.com"
                                                      target="_blank">http://www.topjui.com</a></div>
                     <div class="portal-list">开发文档：<a href="http://www.topjui.com/doc.html" target="_blank">http://www.topjui.com/doc.html</a>
                     </div>
-                    <div class="portal-list">联系我们：<a href="http://www.ewsd.cn/contact.html" target="_blank">http://www.ewsd.cn/contact.html</a>
+                    <div class="portal-list">交流讨论：QQ交流群 593783047
                     </div>
                     <div class="portal-list">系统提供：<a href="http://www.ewsd.cn" target="_blank">易网时代（深圳）信息技术有限公司</a>
                     </div>
