--- a/demo/html/portal/index.html
+++ b/demo/html/portal/index.html
@@ -81,7 +81,7 @@
     <div data-options="region:'center',title:'',fit:true,split:true,border:false,bodyCls:'border_top_none'">
         <div id="pp" style="overflow: hidden;">
             <div style="width:35%;">
-                <div title="关于本系统" iconCls="icon-shield" collapsible="true" closable="true" style="height:210px;">
+                <div title="关于TopJUI" iconCls="icon-shield" collapsible="true" closable="true" style="height:210px;">
                     <div class="portal-list">系统名称：TopJUI前端框架 v1.0正式版</div>
                     <div class="portal-list">GIT 下载：<a href="http://git.oschina.net/xvpindex/TopJUI" target="_blank">http://git.oschina.net/xvpindex/TopJUI</a>
                     </div>
