--- a/demo/html/portal/index.html
+++ b/demo/html/portal/index.html
@@ -82,8 +82,8 @@
         <div id="pp" style="overflow: hidden;">
             <div style="width:35%;">
                 <div title="关于TopJUI" iconCls="icon-shield" collapsible="true" closable="true" style="height:210px;">
-                    <div class="portal-list">系统名称：TopJUI前端框架 v1.0正式版</div>
-                    <div class="portal-list">GIT 下载：<a href="http://git.oschina.net/xvpindex/TopJUI" target="_blank">http://git.oschina.net/xvpindex/TopJUI</a>
+                    <div class="portal-list">框架名称：TopJUI前端框架 v1.0正式版</div>
+                    <div class="portal-list">开源下载：<a href="http://git.oschina.net/xvpindex/TopJUI" target="_blank">http://git.oschina.net/xvpindex/TopJUI</a>
                     </div>
                     <div class="portal-list">官方网站：<a href="http://www.topjui.com"
                                                      target="_blank">http://www.topjui.com</a></div>
@@ -91,7 +91,7 @@
                     </div>
                     <div class="portal-list">交流讨论：QQ交流群 593783047
                     </div>
-                    <div class="portal-list">系统提供：<a href="http://www.ewsd.cn" target="_blank">易网时代（深圳）信息技术有限公司</a>
+                    <div class="portal-list">技术支持：<a href="http://www.ewsd.cn" target="_blank">易网时代（深圳）信息技术有限公司</a>
                     </div>
                 </div>
                 <div title="常见问题" iconCls="icon-databases" collapsible="true" closable="true" style="height:210px;">
