--- a/demo/index.html
+++ b/demo/index.html
@@ -113,15 +113,19 @@
                 text-decoration: none;
             }
         </style>
+        <script>
+            function noMenu() {
+                $.messager.alert('操作提示', '只有前两项有相关左侧菜单，此菜单是演示充数用的！', 'info');
+            }
+        </script>
         <div id="topMenu">
             <ul>
-                <li><a href="#">协同办公</a></li>
-                <li><a href="#">人力资源</a></li>
-                <li><a href="#">财务管理</a></li>
-                <li><a href="#">设计管理</a></li>
-                <li><a href="#">客商管理</a></li>
-                <li><a href="#">网站管理</a></li>
-                <li><a href="#">系统设置</a></li>
+                <li><a href="javascript:generateMenu(1325)">TopJUI静态演示</a></li>
+                <li><a href="javascript:generateMenu(60)">TopJUI开发文档</a></li>
+                <li><a href="javascript:noMenu()">人力资源</a></li>
+                <li><a href="javascript:noMenu()">财务管理</a></li>
+                <li><a href="javascript:noMenu()">业务系统</a></li>
+                <li><a href="javascript:noMenu()">系统设置</a></li>
             </ul>
         </div>
     </div>
