--- a/demo/index.html
+++ b/demo/index.html
@@ -115,7 +115,7 @@
         </style>
         <script>
             function noMenu() {
-                $.messager.alert('操作提示', '此菜单是演示充数用的！', 'info');
+                $.messager.alert('操作提示', '请点击最前面两个菜单，此菜单是演示充数用的！', 'info');
             }
         </script>
         <div id="topMenu">
