--- a/demo/html/grid/treegrid.html
+++ b/demo/html/grid/treegrid.html
@@ -26,7 +26,7 @@
        data-options="id:'menuTreegrid',
         idField:'id',
         treeField:'text',
-        url:'../../json/menu/menu.json',
+        url:'../../json/menu/menu_1.json',
         expandUrl:'../../json/menu/menu_{id}.json',
         fitColumns:true">
     <thead>
