--- a/demo/index.html
+++ b/demo/index.html
@@ -96,7 +96,7 @@
                 border-top-right-radius: 5px;
                 height: 35px;
                 margin-right: 5px;
-                padding: 5px 10px 5px 10px;
+                padding: 5px;
             }
 
             #topMenu li:hover {
