--- a/demo/index.html
+++ b/demo/index.html
@@ -45,7 +45,7 @@
 </div>
 
 <div id="index_layout">
-    <div id="header" data-options="region:'north',split:false,collapsible:true,border:false" style="height:50px;">
+    <div id="header" data-options="region:'north',split:false,collapsible:true,border:false" style="height:60px;">
         <span class="header_system"></span>
     		<span style="float: right; padding-right: 10px;">
                 <a href="javascript:void(0)" class="easyui-menubutton"
@@ -88,7 +88,7 @@
             #topMenu li {
                 list-style: none;
                 float: left;
-                border: solid 1px #F7B824;
+                border-top: solid 1px #F7B824;
                 background-color: #f2f2f2;
                 border-radius: 5px;
                 margin-right: 5px;
@@ -138,13 +138,13 @@
                 <li>
                     <a href="javascript:generateMenu(1325)">
                         <span class="topmenu-icon icon-piechart"></span>
-                        <span class="tabs-title topmenu-with-icon">TopJUI静态演示</span>
+                        <span class="tabs-title topmenu-with-icon">静态演示</span>
                     </a>
                 </li>
                 <li>
                     <a href="javascript:generateMenu(60)">
                         <span class="topmenu-icon icon-book"></span>
-                        <span class="tabs-title topmenu-with-icon">TopJUI开发文档</span>
+                        <span class="tabs-title topmenu-with-icon">开发文档</span>
                     </a>
                 </li>
                 <li>
