--- a/demo/index.html
+++ b/demo/index.html
@@ -45,7 +45,7 @@
 </div>
 
 <div id="index_layout">
-    <div id="header" data-options="region:'north',split:false,collapsible:true,border:false" style="height:60px;">
+    <div id="header" data-options="region:'north',split:false,collapsible:true,border:false" style="height:50px;">
         <span class="header_system"></span>
     		<span style="float: right; padding-right: 10px;">
                 <a href="javascript:void(0)" class="easyui-menubutton"
@@ -85,16 +85,19 @@
                 left: 360px;
             }
 
+            #topMenu ul {
+                padding: 0;
+            }
+
             #topMenu li {
                 list-style: none;
                 float: left;
-                border-top: solid 1px #F7B824;
-                background-color: #f2f2f2;
+                /*border-top: solid 1px #F7B824;*/
+                /*background-color: #f2f2f2;*/
                 border-radius: 5px;
                 margin-right: 5px;
-                height: 36px;
+                height: 50px;
                 padding: 0 5px;
-                margin-top: 2px;
             }
 
             #topMenu li:hover {
@@ -105,8 +108,8 @@
                 font-size: 12px;
                 font-weight: bold;
                 color: #0E2D5F;
-                height: 35px;
-                line-height: 35px;
+                height: 50px;
+                line-height: 50px;
                 display: block;
             }
 
