--- a/demo/index.html
+++ b/demo/index.html
@@ -101,7 +101,7 @@
             }
 
             #topMenu li:hover {
-                background-color: #dddddd;
+                background-color: #f2f2f2;
             }
 
             #topMenu a {
