--- a/demo/index.html
+++ b/demo/index.html
@@ -8,7 +8,7 @@
     <!-- 浏览器标签图片 -->
     <link rel="shortcut icon" href="/topjui/image/favicon.ico"/>
     <!-- EasyUI样式 -->
-    <link type="text/css" rel="stylesheet" id="easyuiTheme" href="/topjui/themes/bootstrap/easyui.css">
+    <link type="text/css" rel="stylesheet" id="easyuiTheme" href="/topjui/themes/default/easyui.css">
     <!-- TopJUI样式 -->
     <link type="text/css" rel="stylesheet" href="/topjui/css/topjui.all.min.css">
     <!-- TopJUI配置 -->
@@ -61,9 +61,9 @@
                 <a href="javascript:void(0)" id="mb2" class="easyui-menubutton"
                    data-options="menu:'#mm2',iconCls:'icon-color_wheel'" style="color:#fff;">主题</a>|
     			<div id="mm2" style="width:180px;">
-                    <div onclick="changeTheme('bootstrap')">默认风格</div>
+                    <div onclick="changeTheme('default')">默认风格</div>
                     <div onclick="changeTheme('black')">黑色风格</div>
-                    <div onclick="changeTheme('default')">蓝色风格</div>
+                    <div onclick="changeTheme('bootstrap')">Bootstrap风格</div>
                     <div onclick="changeTheme('gray')">灰色风格</div>
                     <div onclick="changeTheme('metro')">Win8风格</div>
                     <div onclick="changeTheme('metro-blue')">Win8-蓝</div>
