--- a/demo/html/portal/index.html
+++ b/demo/html/portal/index.html
@@ -97,6 +97,9 @@
                     <div class="portal-list">
                         <a href="javascript:window.parent.addParentTab({href:'http://www.topjui.com/doc/question/fullscreen.html',title:'TopJUI前端框架'})">静态演示系统中首页初始化为什么有时不能全屏？</a>
                     </div>
+                    <div class="portal-list">
+                        <a href="javascript:window.parent.addParentTab({href:'http://www.topjui.com/doc/question/fullscreen.html',title:'TopJUI前端框架'})">静态演示系统中部分组件（如对话框）风格和整体风格不一致？</a>
+                    </div>
                 </div>
                 <div title="动态演示" iconCls="icon-basket_put" collapsible="true" closable="true" style="height:210px;">
                     <div class="portal-list">
