--- a/demo/index.html
+++ b/demo/index.html
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="/topjui/js/topjui.all.js"></script>
     <!-- 首页js -->
     <script type="text/javascript" src="/topjui/js/topjui.index.js" charset="utf-8"></script>
-    <title>TopJUI前端框架</title>
+    <title>TopJUI前端框架 - 静态演示</title>
 </head>
 
 <body>
