--- a/demo/html/portal/index.html
+++ b/demo/html/portal/index.html
@@ -33,7 +33,7 @@
 
         /* 面板标题 */
         .panel-title {
-            font-size: 14px;
+            font-size: 12px;
             height: 24px;
             line-height: 24px;
         }
@@ -80,7 +80,7 @@
     <div data-options="region:'center',title:'',fit:true,split:true,border:false,bodyCls:'border_top_none'">
         <div id="pp" style="overflow: hidden;">
             <div style="width:35%;">
-                <div title="关于TopJUI" iconCls="icon-shield" collapsible="true" closable="true" style="height:210px;">
+                <div title="关于TopJUI" iconCls="icon-shield" style="height:210px;">
                     <div class="portal-list">框架名称：TopJUI前端框架 v1.0正式版</div>
                     <div class="portal-list">开源下载：<a href="http://git.oschina.net/xvpindex/TopJUI" target="_blank">http://git.oschina.net/xvpindex/TopJUI</a>
                     </div>
@@ -93,7 +93,7 @@
                     <div class="portal-list">技术支持：<a href="http://www.ewsd.cn" target="_blank">易网时代（深圳）信息技术有限公司</a>
                     </div>
                 </div>
-                <div title="常见问题" iconCls="icon-databases" collapsible="true" closable="true" style="height:210px;">
+                <div title="常见问题" iconCls="icon-databases" style="height:210px;">
                     <div class="portal-list">
                         <a href="javascript:window.parent.addParentTab({href:'http://www.topjui.com/doc/question/fullscreen.html',title:'TopJUI前端框架'})">静态演示系统中首页初始化为什么有时不能全屏？</a>
                     </div>
@@ -101,7 +101,7 @@
                         <a href="javascript:window.parent.addParentTab({href:'http://www.topjui.com/doc/question/fullscreen.html',title:'TopJUI前端框架'})">静态演示系统中部分组件（如对话框）风格和整体风格不一致？</a>
                     </div>
                 </div>
-                <div title="动态演示" iconCls="icon-basket_put" collapsible="true" closable="true" style="height:210px;">
+                <div title="动态演示" iconCls="icon-basket_put" style="height:210px;">
                     <div class="portal-list">
                         系统简介：<a href="http://www.ewsd.cn/emis.html" target="_blank">企业级快速开发平台</a>
                     </div>
@@ -117,7 +117,7 @@
                 </div>
             </div>
             <div style="width:35%;">
-                <div title="公告通知" iconCls="icon-dic" collapsible="true" closable="true" style="height:210px;">
+                <div title="公告通知" iconCls="icon-dic" style="height:210px;">
                     <div class="portal-list">
                         <a href="javascript:window.parent.addParentTab({href:'/html/article/detail.html',title:'强化党内监督是全面从严治党重要保障'})">强化党内监督是全面从严治党重要保障</a>
                     </div>
@@ -138,14 +138,14 @@
                         <a href="javascript:window.parent.addParentTab({href:'/html/article/detail.html',title:'问中国：民生保障不是“清谈馆”办好实事方能得民心'})">问中国：民生保障不是“清谈馆”办好实事方能得民心</a>
                     </div>
                 </div>
-                <div title="内容分布" iconCls="icon-chart_pie" collapsible="true" closable="true" style="height:430px;">
+                <div title="内容分布" iconCls="icon-chart_pie" style="height:430px;">
                     <div id="agePieChartData" data-toggle="topjui-echarts"
                          data-options="type:'pie',url:'/json/chart/pie.json'"
                          style="width:99%;height:99%;"></div>
                 </div>
             </div>
             <div style="width:30%;">
-                <div title="系统用户" iconCls="icon-vcard" collapsible="true" closable="true" style="height:210px;">
+                <div title="系统用户" iconCls="icon-vcard" style="height:210px;">
                     <table class="easyui-datagrid"
                            data-options="fit:true,
                            border:false,
@@ -161,7 +161,7 @@
                         </thead>
                     </table>
                 </div>
-                <div title="最新会员" iconCls="icon-user" collapsible="true" closable="true" style="height:210px;">
+                <div title="最新会员" iconCls="icon-user" style="height:210px;">
                     <table class="easyui-datagrid"
                            data-options="fit:true,
                            border:false,
@@ -176,8 +176,7 @@
                         </thead>
                     </table>
                 </div>
-                <div title="服务器信息" iconCls="icon-application_xp_terminal" collapsible="true" closable="true"
-                     style="height:210px;">
+                <div title="服务器信息" iconCls="icon-application_xp_terminal" style="height:210px;">
                     <div class="portal-list">服务器地址：127.0.0.1</div>
                     <div class="portal-list">JDK运行版本：1.8.0_60</div>
                     <div class="portal-list">服务器运行时区：Asia/Shanghai</div>
