--- a/demo/index.html
+++ b/demo/index.html
@@ -173,7 +173,7 @@
         </div>
     </div>
 
-    <div data-options="region:'west',split:true,width:212" title="轻松工作，快乐办公！" iconCls="icon-monitor"
+    <div data-options="region:'west',split:true,width:212" title="轻松工作，快乐办公！" iconCls="icon-color"
          style="overflow:hidden;" align="left">
 
         <div id="menuTab" class="easyui-tabs" data-options="fit:true,border:false">
