--- a/demo/html/portal/index.html
+++ b/demo/html/portal/index.html
@@ -88,7 +88,7 @@
                                                      target="_blank">http://www.topjui.com</a></div>
                     <div class="portal-list">开发文档：<a href="http://www.topjui.com/doc.html" target="_blank">http://www.topjui.com/doc.html</a>
                     </div>
-                    <div class="portal-list">交流讨论：QQ交流群 593783047
+                    <div class="portal-list">交流讨论：<a target="_blank" href="//shang.qq.com/wpa/qunwpa?idkey=625ca4e1e6ca0b06cc18e4b7b1efcad50c21dd1d5cc350bf13123b07991e6292"><img border="0" src="//pub.idqqimg.com/wpa/images/group.png" alt="TopJUI前端框架" title="TopJUI前端框架"></a>
                     </div>
                     <div class="portal-list">技术支持：<a href="http://www.ewsd.cn" target="_blank">易网时代（深圳）信息技术有限公司</a>
                     </div>
