--- a/demo/html/portal/index.html
+++ b/demo/html/portal/index.html
@@ -57,7 +57,7 @@
         }
     </style>
     <script>
-        $(function () {
+        jQuery(function () {
             $('#pp').portal({
                 border: false
             });
