--- a/demo/html/complex/datagrid.html
+++ b/demo/html/complex/datagrid.html
@@ -47,7 +47,7 @@
        data-options="clickEvent:'openDialog',
        dialog:{
            id:'userAddDialog',
-           href:'/html/complex/edit.html',
+           href:'/html/complex/add.html',
            buttonsGroup:[
                {text:'保存',url:'/json/response/success.json',iconCls:'icon-add',handler:'ajaxForm'}
            ]
