--- a/demo/html/portal/index.html
+++ b/demo/html/portal/index.html
@@ -27,13 +27,17 @@
             font-weight: bold;
         }
 
+        .panel-body {
+            height: 165px;
+        }
+
         ul {
             margin: 0;
             padding-left: 10px;
         }
 
         ul li {
-            line-height: 28px;
+            line-height: 27px;
         }
 
         .colorPic {
@@ -69,57 +73,68 @@
         <div class="col-md-9">
             <div class="row no_gutter">
                 <div class="col-md-6">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div style="background-color: #009688; margin-left: 10px; height: 136px; line-height: 136px;">
-                                <div class="fa fa-users fa-5x"></div>
-                            </div>
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <i class="fa fa-edge"></i> 关于TopJUI
                         </div>
-                        <div class="col-md-6">
-                            <div style="background-color: #5FB878; margin-right: 10px; height: 136px;"></div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div style="background-color: #1E9FFF; margin-left: 10px; margin-top: 10px; height: 136px;"></div>
-                        </div>
-                        <div class="col-md-6">
-                            <div style="background-color: #F7B824; margin-right: 10px; margin-top: 10px; height: 136px;"></div>
-                        </div>
-                    </div>
-                    <div class="row no_gutter">
-                        <div class="col-md-6">
-                            <div style="background-color: #FF5722; margin-left: 10px; margin-top: 10px; height: 136px;"></div>
-                        </div>
-                        <div class="col-md-6">
-                            <div style="background-color: #01AAED; margin-right: 10px; margin-top: 10px; height: 136px;"></div>
+                        <div class="panel-body">
+                            <ul>
+                                <li>框架名称：TopJUI前端框架 v1.0正式版</li>
+                                <li>开源下载：<a href="http://git.oschina.net/xvpindex/TopJUI" target="_blank">http://git.oschina.net/xvpindex/TopJUI</a>
+                                </li>
+                                <li>官方网站：<a href="http://www.topjui.com" target="_blank">http://www.topjui.com</a></li>
+                                <li>开发文档：<a href="http://www.topjui.com/doc.html" target="_blank">http://www.topjui.com/doc.html</a>
+                                </li>
+                                <li>交流讨论：<a target="_blank"
+                                            href="//shang.qq.com/wpa/qunwpa?idkey=625ca4e1e6ca0b06cc18e4b7b1efcad50c21dd1d5cc350bf13123b07991e6292"><img
+                                        border="0" src="//pub.idqqimg.com/wpa/images/group.png" alt="TopJUI前端框架"
+                                        title="TopJUI前端框架"></a>
+                                </li>
+                                <!--<li>技术支持：<a href="http://www.ewsd.cn" target="_blank">易网时代（深圳）信息技术有限公司</a>
+                                </li>-->
+                            </ul>
                         </div>
                     </div>
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <i class="fa fa-user"></i> 常见问题
+                        </div>
+                        <div class="panel-body">
+                            <ul>
+                                <li>
+                                    <a href="javascript:window.parent.addParentTab({href:'http://www.topjui.com/doc/question/fullscreen.html',title:'TopJUI前端框架'})">静态演示系统中首页初始化为什么有时不能全屏？</a>
+                                </li>
+                                <li>
+                                    <a href="javascript:window.parent.addParentTab({href:'http://www.topjui.com/doc/question/fullscreen.html',title:'TopJUI前端框架'})">静态演示系统中部分组件（如对话框）风格和整体风格不一致？</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
                 </div>
 
                 <div class="col-md-6">
 
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <i class="fa fa-edge"></i> TopJUI前端框架
+                            <i class="fa fa-edge"></i> 动态演示
                         </div>
                         <div class="panel-body">
                             <ul>
                                 <li>
-                                    <a href="javascript:window.parent.addParentTab({href:'/html/article/detail.html',title:'强化党内监督是全面从严治党重要保障'})">强化党内监督是全面从严治党重要保障</a>
+                                    系统简介：<a href="http://www.ewsd.cn/emis.html" target="_blank">企业级快速开发平台</a>
                                 </li>
                                 <li>
-                                    <a href="javascript:window.parent.addParentTab({href:'/html/article/detail.html',title:'李克强：地方和部门主要负责同志要带头...'})">李克强：地方和部门主要负责同志要带头...</a>
+                                    演示地址：<a href="http://demo.ewsd.cn/system/index/index" target="_blank">http://demo.ewsd.cn/system/index/index</a>
                                 </li>
                                 <li>
-                                    <a href="javascript:window.parent.addParentTab({href:'/html/article/detail.html',title:'李克强：政务公开是常态不公开是例外'})">李克强：政务公开是常态不公开是例外</a>
+                                    帐号：topjui，密码：topjui
                                 </li>
-                                <li>
-                                    <a href="javascript:window.parent.addParentTab({href:'/html/article/detail.html',title:'军委机关将总体实行“部—局—处”三级体制'})">军委机关将总体实行“部—局—处”三级体制</a>
-                                </li>
-                                <li>
-                                    <a href="javascript:window.parent.addParentTab({href:'/html/article/detail.html',title:'蔡奇就任北京代市长 王安顺因工作调动请辞'})">蔡奇就任北京代市长王安顺因工作调动请辞</a>
-                                </li>
+                                <!--<li>
+                                    本动态演示系统为 <a href="http://www.ewsd.cn" target="_blank">易网时代</a> 商业产品，欢迎洽谈合作！
+                                </li>-->
                             </ul>
                         </div>
                     </div>
@@ -148,6 +163,7 @@
                             </ul>
                         </div>
                     </div>
+
                 </div>
             </div>
 
@@ -155,10 +171,89 @@
                 <div class="col-md-12">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <i class="fa fa-bar-chart"></i> 系统使用情况
+                            <i class="fa fa-bar-chart"></i> 快速入口
                         </div>
                         <div class="panel-body">
-                            <h3 class="text-center" style="font-weight: bold">关于本演示系统</h3>
+
+                            <style>
+                                .link a {
+                                    color: #fff;
+                                    text-decoration: none;
+                                }
+
+                                .link .fa {
+                                    height: 135px;
+                                    line-height: 135px;
+                                }
+
+                                .link .bg {
+                                    height: 135px;
+                                    text-align: center
+                                }
+
+                                .link .bg:hover {
+                                    background-color: #009688;
+                                }
+
+                                .bg-green {
+                                    background-color: #5FB878;
+                                }
+
+                                .bg-blue {
+                                    background-color: #1E9FFF;
+                                }
+
+                                .bg-yellow {
+                                    background-color: #F7B824;
+                                }
+
+                                .bg-red {
+                                    background-color: #FF5722;
+                                }
+
+                                .bg span {
+                                    font-weight: bold;
+                                    font-size: 30px;
+                                    word-break: normal;
+                                    white-space: pre-wrap;
+                                }
+
+                            </style>
+                            <div class="row">
+                                <div class="col-md-3 link">
+                                    <a href="javascript:window.parent.addParentTab({href:'/html/complex/datagrid.html',title:'数据表格'})">
+                                        <div class="bg bg-green">
+                                            <div class="fa fa-users fa-3x"></div>
+                                            <span>数据表格</span>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="col-md-3 link">
+                                    <a href="javascript:window.parent.addParentTab({href:'/html/complex/treegrid.html',title:'树形表格'})">
+                                        <div class="bg bg-blue">
+                                            <div class="fa fa-users fa-3x"></div>
+                                            <span>树形表格</span>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="col-md-3 link">
+                                    <a href="javascript:window.parent.addParentTab({href:'/html/complex/edatagrid.html',title:'可编辑表格'})">
+                                        <div class="bg bg-yellow">
+                                            <div class="fa fa-users fa-3x"></div>
+                                            <span>可编辑表格</span>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="col-md-3 link">
+                                    <a href="javascript:window.parent.addParentTab({href:'/html/form/input.html',title:'文本输入'})">
+                                        <div class="bg bg-red">
+                                            <div class="fa fa-users fa-3x"></div>
+                                            <span>文本输入</span>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -228,25 +323,15 @@
                 <div class="col-md-12">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <i class="fa fa-edge"></i> 行业资讯
+                            <i class="fa fa-edge"></i> 服务器信息
                         </div>
                         <div class="panel-body">
                             <ul>
-                                <li>
-                                    <a href="javascript:window.parent.addParentTab({href:'/html/article/detail.html',title:'强化党内监督是全面从严治党重要保障'})">强化党内监督是全面从严治党重要保障</a>
-                                </li>
-                                <li>
-                                    <a href="javascript:window.parent.addParentTab({href:'/html/article/detail.html',title:'李克强：地方和部门主要负责同志要带头...'})">李克强：地方和部门主要负责同志要带头...</a>
-                                </li>
-                                <li>
-                                    <a href="javascript:window.parent.addParentTab({href:'/html/article/detail.html',title:'李克强：政务公开是常态不公开是例外'})">李克强：政务公开是常态不公开是例外</a>
-                                </li>
-                                <li>
-                                    <a href="javascript:window.parent.addParentTab({href:'/html/article/detail.html',title:'军委机关将总体实行“部—局—处”三级体制'})">军委机关将总体实行“部—局—处”三级体制</a>
-                                </li>
-                                <li>
-                                    <a href="javascript:window.parent.addParentTab({href:'/html/article/detail.html',title:'蔡奇就任北京代市长 王安顺因工作调动请辞'})">蔡奇就任北京代市长王安顺因工作调动请辞</a>
-                                </li>
+                                <li>JDK运行版本：1.8.0_60</li>
+                                <li>服务器运行时区：Asia/Shanghai</li>
+                                <li>服务器系统名称：Linux</li>
+                                <li>服务器系统架构：amd64</li>
+                                <li>服务器系统版本：2.6.32-573.22.1.el6.x86_64</li>
                             </ul>
                         </div>
                     </div>
