--- a/demo/html/portal/index.html
+++ b/demo/html/portal/index.html
@@ -245,7 +245,7 @@
                                     </a>
                                 </div>
                                 <div class="col-md-3 link">
-                                    <a href="javascript:window.parent.addParentTab({href:'/html/form/input.html',title:'文本输入'})">
+                                    <a href="javascript:window.parent.addParentTab({href:'/html/form/input_index.html',title:'文本输入'})">
                                         <div class="bg bg-red">
                                             <div class="fa fa-users fa-3x"></div>
                                             <span>文本输入</span>
